--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </ul>
       </nav>
       <div id="main">
-        <div id="tabs"></div>
+        <ul id="tabs"></ul>
         <div id="editor"></div>
       </div>
     </div>
