Add support for theming components outside the editor

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>text-editor</title>
     <script src="https://cdn.jsdelivr.net/npm/eruda" onload="eruda.init()"></script>
+    <style id="dynamic-theme-colors"></style>
   </head>
   <body>
     <div id="app">
@@ -23,6 +24,7 @@
           <li tabindex="1"><span>Edit</span></li>
         </ul>
       </nav>
+      <div id="welcome"></div>
       <div id="main">
         <ul id="tabs"></ul>
         <div id="editor"></div>
