--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,6 +7,16 @@
     <title>text-editor</title>
     <script src="https://cdn.jsdelivr.net/npm/eruda" onload="eruda.init()"></script>
     <style id="dynamic-theme-colors"></style>
+    <script>
+      navigator.serviceWorker.register('/sw.js').then(
+        function (registration) {
+          console.log('Service worker registered with scope: ', registration.scope);
+        },
+        function (err) {
+          console.log('Service worker registration failed: ', err);
+        }
+      );
+    </script>
   </head>
   <body>
     <div id="app">
