--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="manifest" href="/app.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>text-editor</title>
-    <script src="https://cdn.jsdelivr.net/npm/eruda" onload="eruda.init()"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/eruda" onload="eruda.init()"></script> -->
     <style id="dynamic-theme-colors"></style>
+    <meta name="theme-color" content="#181818" media="(prefers-color-scheme: dark)" />
     <script>
       navigator.serviceWorker.register('/sw.js').then(
         function (registration) {
