Add window controls overlay support

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
   <body>
     <div id="app">
       <nav id="menubar-container">
+        <div class="icon">
+          <img src="/favicon.ico" alt="favicon" class="icon" width="26" height="26" />
+        </div>
         <ul role="menubar" id="menubar">
           <li tabindex="1">
             <span>File</span>
