--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>text-editor</title>
     <!-- <script src="https://cdn.jsdelivr.net/npm/eruda" onload="eruda.init()"></script> -->
     <style id="dynamic-theme-colors"></style>
-    <meta name="theme-color" content="#181818" media="(prefers-color-scheme: dark)" />
+    <meta name="theme-color" content="#181818" />
     <script>
       navigator.serviceWorker.register('/sw.js').then(
         function (registration) {
@@ -49,6 +49,7 @@
         <div id="editor"></div>
       </div>
     </div>
+    <div id="dialogs"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
